# solar-segmentation-annotation-ssl

./: .gitignore  main.py  pyproject.toml  skipped images.txt
src/solar_ssl/apps/: annotator.py  inference.py
src/solar_ssl/data/: dataset.py  tiling.py  transforms.py
src/solar_ssl/models/: moco.py  simclr.py  unet.py
src/solar_ssl/training/: train_moco.py  train_simclr.py  train_unet.py
